feat: add route '/addresses/user/:userId'
