# src/controllers/addressesController.js
@@ -1,4 +1,3 @@
-// addressesController.js
 import AddressesService from '../services/addressesService.js';
 
 class AddressesController {
@@ -12,6 +11,19 @@ class AddressesController {
     } catch (err) {
       return res.status(500).send({ message: err.message });
     }
+ }
+
+ static async findAdressByUserId(req, res) {
+  try {
+    const { userId } = req.params;
+    const addresses = await AddressesService.findAddressByUserId(userId);
+    if (addresses.length === 0) {
+      return res.status(404).json({ message: 'Usuário não encontrado' });
+    }
+    res.status(200).json(addresses);
+  } catch (err) {
+    return res.status(500).send({ message: err.message });
+  }
  }
 
  static async createAddress(req, res) {
